wier/force-app/main/default/objects/Check_List__c/Check_List__c.object-meta.xml
<CustomObject>
    <label>Tendering Checklist</label>
    <nameField>
        <label>Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tendering  Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>