wier/force-app/main/default/objects/Check_List__c/fields/Assigned_Status__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Status__c</fullName>
    <label>Assigned Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>