wier/force-app/main/default/objects/Check_List__c/fields/CLOSEDATE__c.field-meta.xml
<CustomField>
    <fullName>CLOSEDATE__c</fullName>
    <formula>Opportunity__r.Opportunity_Closed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLOSEDATE</label>
    <type>Date</type>
</CustomField>