wier/force-app/main/default/objects/Check_List__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <label>DeliveryLeadTime after Cust.Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>