wier/force-app/main/default/objects/Check_List__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <formula>TEXT(Opportunity__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>status</label>
    <type>Text</type>
</CustomField>