wier/force-app/main/default/objects/Check_List__c/fields/Wheather_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Wheather_Applicable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>If Applicable</label>
    <type>Checkbox</type>
</CustomField>