wier/force-app/main/default/objects/Check_List__c/validationRules/Delivery_Lead_Time_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Lead_Time_validation</fullName>
    <active>false</active>
    <errorConditionFormula>1&lt;=0</errorConditionFormula>
    <errorDisplayField>Lead_Time__c</errorDisplayField>
    <errorMessage>You must enter a number greater than Zero.</errorMessage>
</ValidationRule>