wier/force-app/main/default/objects/Check_List__c/validationRules/Non_Edittable.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Edittable</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Assignee_Comments__c!=null, AND(S_No__c = 25, ISCHANGED(Assignee_Comments__c )),FALSE)</errorConditionFormula>
    <errorMessage>Only Procurement manager can edit the record</errorMessage>
</ValidationRule>