wier/force-app/main/default/objects/Check_List__c/validationRules/Whether_applicatble_checkbox_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Whether_applicatble_checkbox_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(S_No__c = 25,Wheather_Applicable__c=FALSE)</errorConditionFormula>
    <errorMessage>S.No 25 is mandatory,Please assign task to Planning.</errorMessage>
</ValidationRule>